# BRCA_integration-code

./: .gitignore  BRCA1_BRCA2_domains.py  BRCA1_gnomAD_v4.1.0_ENSG00000012048_2025_09_18_14_35_11.csv  BRCA2_gnomAD_v4.1.0_ENSG00000139618_2025_09_18_14_36_35.csv  CITATION.cff  Cross_validation_stratified.txt  EVE_REPLACEMENT_IMPLEMENTATION.md  FIG4_sidechain_and_grantham.xlsx  FIG4_sidechain_and_grantham_V3.xlsx  FIG4_sidechain_and_grantham_V4.xlsx  FIG4_sidechain_and_grantham_old.xlsx  FIG4_sidechain_and_grantham_v2.xlsx  Makefile  README.md  SUPP_TABLES_BRCA12_OCT_2025_scored.xlsx  add_assay_column.py  assay_column_added.xlsx  binned_summary.xlsx  brca1_acmg_score_v1.csv  brca1_acmg_score_v3.csv  brca1_acmg_score_v3_alpha.csv  brca2_acmg_score_v1.csv  brca2_acmg_score_v3.csv  brca2_acmg_score_v3_alpha.csv  brca2_acmg_score_v5_alpha.csv  by_region_calculation.py  calculate_numbers.py  checksums.sha256  class.py  classification_results.xlsx  classification_results_10fold_V2.xlsx  classification_results_5fold_V2.xlsx  count_by_bins.py  enrich_depletion_table.py  frequency_enrichment.py  get_categories.py  gnomad_class.py  grantham.py  k_fold_5_calcs.py  k_fold_calcs.py  (+39 more)
dataset/: ACMG_other_points.xlsx  AlphaMissense_Calculations_all.xlsx  BRCA2_track_refPanel.xlsx  Figures source FYI BRCAJULY 2025.xlsx  Grantham.xlsx  SUPP_TABLES_BRCA12_FEB_2025_V1.xlsx  fergus_clean_data.csv  sens_spec_table_V1.csv  sens_spec_table_V1.xlsx  sharan_clean_data.csv
docs/: REPRODUCIBILITY.md  cross_validation_stratified.md  eve_replacement_implementation.md
results/: output_v11_BRCA2.txt  (+8 more)
(+25 files in other folders)
