[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brca-integration-code"
version = "0.1.0"
description = "Reproducible BRCA1/BRCA2 supplementary table generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Paulo Cilas Morais Lyra Junior"},
]
license = "MIT"
dependencies = [
    "matplotlib==3.11.0",
    "numpy==2.5.1",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "upsetplot==0.9.0",
]

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[project.urls]
Repository = "https://github.com/paulocilasjr/BRCA_integration-code"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
brca-build-tables = "brca_integration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
